Fix calling defd functions with default arguments as entrypoint

--- a/.cursorrules.md
+++ b/.cursorrules.md
@@ -6,9 +6,11 @@ Code Style and Structure
 - Prefer higher-order functions and recursion over imperative loops.
 - Use pattern matching directly in function clauses when needed for control flow.
 - Prefer patterns in function arguments over case statements.
-- Prefer one-line function syntax when all clauses fit on one line.
+- Prefer one-line function syntax with no blank lines in between when all clauses fit on one line.
 - Use descriptive variable and function names (e.g., user_signed_in?, calculate_total).
 - Sort aliases alphabetically.
+- Don't add comments to the code unless explicitly asked for.
+- Calls to defd should not have parentheses.
 
 Tests
 - Structure test files to mirror the directory structure of the code under test.
